--- a/src/Component/App/App.module.css
+++ b/src/Component/App/App.module.css
@@ -1,5 +1,5 @@
 .app {
-  background-image: url(../../../public/background.jpg);
+  background-image: url(/background.jpg);
   background-size: cover;
   height: 100vh;
 }
