--- a/src/Component/ShopPage/ShopPage.module.css
+++ b/src/Component/ShopPage/ShopPage.module.css
@@ -1,4 +1,10 @@
 .shopPage {
-    background-color: rgba(240, 248, 255 ,0.9);
-    height: 92vh;
+    background-color: white;
+    height: min-content;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-end;
+    justify-content: center;
+    gap: 30px;
+    padding: 20px 50px;
 }
