--- a/src/Component/ProductCard/ProductCard.module.css
+++ b/src/Component/ProductCard/ProductCard.module.css
@@ -1,35 +1,56 @@
 .card {
-    width: 300px;
-    height: 400px;
-    padding: 15px;
-    /* border: 1px solid black; */
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 10px;
+  width: 300px;
+  height: 450px;
+  padding: 15px;
+  /* border: 1px solid black; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
 }
 
-.card > div {
-    width: 300px;
-    height: 300px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /* border: 1px solid red; */
+.card > div:first-of-type {
+  width: 300px;
+  height: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
 }
 
 .card img {
-    width: 150px;
-    height: auto;
-    object-fit: contain;
+  width: 150px;
+  height: auto;
+  object-fit: contain;
 }
 
 .card > p:nth-of-type(1) {
-    display: flexbox;
-    align-items: center;
-    text-align: center;
-    height: 30px;
-    width: max-width;
-    overflow: hidden;
-    text-overflow: ellipsis;
+  display: flexbox;
+  align-items: center;
+  text-align: center;
+  height: 30px;
+  width: max-width;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.card button {
+  background-color: black;
+  color: white;
+  padding: 5px 20px;
+  border-radius: 10px;
+}
+
+.card input {
+  border: none;
+  background-color: #D5D5D5;
+  border-radius: 20px;
+  width: 20%;
+  padding: 0px 10px;
+}
+
+.card > div:nth-of-type(2) {
+  display: flex;
+  justify-content: center;
+  gap: 5px;
 }
