--- a/src/Component/ProductCard/ProductCard.module.css
+++ b/src/Component/ProductCard/ProductCard.module.css
@@ -2,7 +2,6 @@
   width: 300px;
   height: 450px;
   padding: 15px;
-  /* border: 1px solid black; */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -15,7 +14,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  
 }
 
 .card img {
@@ -34,16 +32,9 @@
   text-overflow: ellipsis;
 }
 
-.card button {
-  background-color: black;
-  color: white;
-  padding: 5px 20px;
-  border-radius: 10px;
-}
-
 .card input {
   border: none;
-  background-color: #D5D5D5;
+  background-color: #f9f9f9;
   border-radius: 20px;
   width: 20%;
   padding: 0px 10px;
