--- a/src/Component/ProductCard/ProductCard.module.css
+++ b/src/Component/ProductCard/ProductCard.module.css
@@ -34,9 +34,9 @@
 
 .card input {
   border: none;
-  background-color: #f9f9f9;
+  background-color: 	hsl(0, 0%, 88%);
   border-radius: 20px;
-  width: 20%;
+  width: 30%;
   padding: 0px 10px;
 }
 
