--- a/src/Component/App/App.module.css
+++ b/src/Component/App/App.module.css
@@ -2,6 +2,8 @@
   background-image: url(/background.jpg);
   background-size: cover;
   height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .navBar {
