--- a/src/Component/ShopPage/ShopPage.module.css
+++ b/src/Component/ShopPage/ShopPage.module.css
@@ -1,6 +1,6 @@
 .shopPage {
   background-color: white;
-  height: min-content;
+  flex: 1;
   display: flex;
   flex-wrap: wrap;
   align-items: flex-end;
