Style cart items section of cart page

--- a/src/Component/CartItemCard/CartItemCard.module.css
+++ b/src/Component/CartItemCard/CartItemCard.module.css
@@ -23,5 +23,10 @@
 
   .cartItemCard > div:nth-of-type(2) {
     width: 300px;
-    
+  }
+
+  .cartItemCard > div:nth-of-type(3) {
+    width: 300px;
+    display: flex;
+    justify-content: center;
   }
