--- a/src/Component/CartPage/CartPage.module.css
+++ b/src/Component/CartPage/CartPage.module.css
@@ -1,5 +1,5 @@
 .cartPage {
-  background-color: #EBEDED;
+  background-color: #ebeded;
   flex: 1;
   display: flex;
   gap: 30px;
@@ -13,24 +13,38 @@
   justify-content: center;
 }
 
-
-.cartPage > div:nth-child(1) {
-  background-color: white;
-  flex: 1;
+.cartPage > div {
   display: flex;
   flex-direction: column;
-  align-items: center;
   gap: 10px;
-  padding: 30px 0px; 
+  background-color: white;
+}
+
+.cartPage > div:nth-child(1) {
+  flex: 1;
+  align-items: center;
+  padding: 30px 0px;
 }
 
 .cartPage > div:nth-child(1) > div {
   display: flex;
   flex-direction: column;
-  gap: 20px
+  gap: 20px;
 }
 
 .cartPage > div:nth-child(2) {
-  background-color: white;
   width: 300px;
+  justify-content: center;
+  align-items: center;
+  padding: 20px 40px;
+  
+}
+
+.cartPage > div:nth-child(2) > div {
+  font-weight: bolder;
+  font-size: 1.8rem;
+}
+
+.cartPage > div:nth-child(2) > button {
+  padding: 2px 44px;
 }
